demos/container-types/good/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: container-types
spec:
  selector:
    app: container-types
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
